--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -15,7 +15,7 @@
     <a href="/profile/index-en.html" class="btn active">Profile</a>
     <a href="/admin/index.html"
    id="adminBtn"
-   class="btn btn-warning"
+   class="btn btn-admin"
    style="display:none;">
   Admin panel
 </a>
