--- a/profile/index.html
+++ b/profile/index.html
@@ -15,8 +15,8 @@
     <a href="/profile/index.html" class="btn active">Profil</a>
     <a href="/admin/index.html"
    id="adminBtn"
-   class="btn"
-   style="display:none; background:#8b6f1a;">
+   class="btn btn-admin"
+   style="display:none;">
   Admin panel
 </a>
     <a href="/api/logout.php?lang=cs" class="btn">Odhlásit se</a>
