--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -18,7 +18,10 @@
 
 <main class="auth-container profile-shell">
   <h1 id="bugTitle">Bug detail</h1>
-
+<a href="/admin/bug_reports.html" class="btn btn-secondary" style="margin-bottom:15px;">
+  ← Zpět na přehled bug reportů
+  
+</a>
   <div class="profile-card">
     <p><strong>User:</strong> <span id="bugUser"></span></p>
     <p><strong>Account:</strong> <span id="bugAccount"></span></p>
