--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -37,11 +37,9 @@
     <label>Message</label>
     <div id="bugMessage" class="profile-card muted"></div>
 
-<div class="form-group">
-  <label>Reported issue (user message)</label>
-  <div class="bug-message">
-    <pre id="bugMessage"></pre>
-  </div>
+<div class="bug-user-message">
+  <h3>Reported issue (user message)</h3>
+  <pre id="bugMessage"></pre>
 </div>
 
     <label>Admin reply</label>
