--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -17,11 +17,15 @@
 </header>
 
 <main class="auth-container profile-shell">
+
   <h1 id="bugTitle">Bug detail</h1>
-<a href="/admin/bug_reports.html" class="btn btn-secondary">
-  ← Zpět na přehled bug reportů
-</a>
+
+  <a href="/admin/bug_reports.html" class="btn btn-secondary" style="margin-bottom:20px;">
+    ← Zpět na přehled bug reportů
+  </a>
+
   <div class="profile-card">
+
     <p><strong>User:</strong> <span id="bugUser"></span></p>
     <p><strong>Account:</strong> <span id="bugAccount"></span></p>
     <p><strong>Category:</strong> <span id="bugCategory"></span></p>
@@ -34,19 +38,24 @@
       <option value="closed">CLOSED</option>
     </select>
 
-    <label>Message</label>
-    <div id="bugMessage" class="profile-card muted"></div>
+    <!-- USER MESSAGE -->
+    <div class="bug-user-message" style="margin-top:20px;">
+      <h3>Reported issue (user message)</h3>
+      <pre id="bugUserMessage" class="profile-card muted"></pre>
+    </div>
 
-<div class="bug-user-message">
-  <h3>Reported issue (user message)</h3>
-  <pre id="bugMessage"></pre>
-</div>
-
-    <label>Admin reply</label>
+    <!-- ADMIN REPLY -->
+    <label style="margin-top:20px;">Admin reply</label>
     <textarea id="adminReply" rows="5"></textarea>
 
-    <button id="saveBtn" class="btn btn-primary">Uložit</button>
+    <button id="saveBtn" class="btn btn-primary" style="margin-top:20px;">
+      Uložit
+    </button>
+
   </div>
+
+</main>
+
 <script>
 const params = new URLSearchParams(window.location.search);
 const id = params.get('id');
@@ -62,10 +71,13 @@ fetch(`/admin/api/get_bug_report.php?id=${id}`)
     document.getElementById('bugUser').textContent = b.email;
     document.getElementById('bugAccount').textContent = b.game_account || '-';
     document.getElementById('bugCategory').textContent = b.category;
-    document.getElementById('bugMessage').textContent = b.message;
     document.getElementById('bugStatus').value = b.status;
     document.getElementById('adminReply').value = b.admin_reply || '';
-    document.getElementById('bugMessage').textContent = data.message || '';
+
+    const msg = document.getElementById('bugUserMessage');
+    msg.textContent = b.message && b.message.trim()
+      ? b.message
+      : '⚠ Uživatel nepřiložil žádný popis problému.';
   });
 
 document.getElementById('saveBtn').addEventListener('click', async () => {
@@ -77,15 +89,18 @@ document.getElementById('saveBtn').addEventListener('click', async () => {
 
   const res = await fetch('/admin/api/update_bug_report.php', {
     method: 'POST',
-    headers: {'Content-Type':'application/json'},
+    headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(payload)
   });
 
   const data = await res.json();
- if (data.ok) alert('Uloženo');
+  if (data.ok) {
+    alert('Uloženo');
+  } else {
+    alert('Chyba při ukládání');
+  }
 });
 </script>
 
-<div id="notifications"></div>
-
-</main>
+</body>
+</html>
