--- a/admin/index.html
+++ b/admin/index.html
@@ -39,13 +39,13 @@ fetch('/api/me.php')
       <a href="/admin/bug_reports.html" class="btn btn-primary">Otevřít</a>
     </div>
 
-    <div class="admin-card disabled">
+    <div class="admin-card">
       <h3>Users</h3>
       <p>Správa uživatelů</p>
       <span class="badge">Coming soon</span>
     </div>
 
-    <div class="admin-card disabled">
+    <div class="admin-card">
       <h3>Online players</h3>
       <p>Aktuálně přihlášení hráči</p>
       <span class="badge">Coming soon</span>
