--- a/admin/index.html
+++ b/admin/index.html
@@ -39,7 +39,7 @@ fetch('/api/me.php')
       <a href="/admin/bug_reports.html" class="btn btn-primary">Otevřít</a>
     </div>
 
-    <div class="admin-card">
+    <div class="admin-card disabled">
       <h3>Users</h3>
       <p>Správa uživatelů</p>
       <span class="badge">Coming soon</span>
@@ -48,7 +48,7 @@ fetch('/api/me.php')
     <div class="admin-card">
       <h3>Online players</h3>
       <p>Aktuálně přihlášení hráči</p>
-      <span class="badge">Coming soon</span>
+      <a href="/admin/online_players.html" class="btn btn-primary">Otevřít</a>
     </div>
 
   </div>
