--- a/admin/online_players.html
+++ b/admin/online_players.html
@@ -74,7 +74,8 @@
         <th>Postava</th>
         <th>Level</th>
         <th>Účet</th>
-        <th>Odehráno</th>title="Celkový odehraný čas postavy"
+        <th>Odehráno</th>
+        <title>Celkový odehraný čas postavy</title>
       </tr>
     </thead>
     <tbody></tbody>
