--- a/admin/online_players.html
+++ b/admin/online_players.html
@@ -17,6 +17,26 @@
 .gm-row {
   background: rgba(61, 220, 151, 0.08);
 }
+/* POVOLÍ KLIK NA HLAVIČKY TABULKY */
+.admin-table thead th {
+  pointer-events: auto;
+  position: relative;
+  z-index: 5;
+}
+
+/* TABULKA MUSÍ BÝT NAD POZADÍM */
+.admin-table {
+  position: relative;
+  z-index: 5;
+}
+.admin-table thead th {
+  cursor: pointer;
+}
+
+.admin-table thead th:hover {
+  color: #3ddc97;
+  text-shadow: 0 0 6px rgba(61,220,151,.4);
+}
 
 .gm-badge {
   display: inline-block;
