--- a/admin/bug_reports.html
+++ b/admin/bug_reports.html
@@ -60,7 +60,8 @@
 
 <main class="auth-container profile-shell">
   <h1>Bug reports – admin</h1>
-
+    <a href="/admin/index.html" class="btn btn-secondary" style="margin-bottom:20px;">
+    ← Zpět na základní stránku
   <table class="admin-table" id="ticketsTable">
     <thead>
       <tr>
