--- a/admin/online_players.html
+++ b/admin/online_players.html
@@ -65,7 +65,9 @@
 
 <main class="auth-container profile-shell">
   <h1>Online hráči</h1>
-
+<a href="/admin/index.html" class="btn btn-secondary" style="margin-bottom:20px;">
+    ← Zpět na základní stránku
+  </a>
   <p class="muted">
     Aktuálně online: <span id="onlineCount" class="online-badge">0</span>
   </p>
