--- a/profile/index.html
+++ b/profile/index.html
@@ -12,15 +12,13 @@
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
   <div class="auth">
-    <a href="/profile/index.html" class="btn active">Profil</a>
-    <a href="/admin/index.html"
-   id="adminBtn"
-   class="btn btn-admin"
-   style="display:none;">
-  Admin panel
-</a>
-    <a href="/api/logout.php?lang=cs" class="btn">Odhlásit se</a>
-  </div>
+  <a href="/profile/index.html" class="btn active">Profil</a>
+
+  <!-- admin -->
+  <a href="/admin/index.html" class="btn btn-warning">Admin panel</a>
+
+  <a href="/api/logout.php" class="btn">Odhlásit se</a>
+</div>
 </header>
 
 <main class="auth-container profile-shell">
