--- a/profile/index.html
+++ b/profile/index.html
@@ -11,7 +11,7 @@
 
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
-  <div class="auth">
+  <div class="auth auth-center">
   <a href="/profile/index.html" class="btn active">Profil</a>
 
   <a href="/admin/index.html"
@@ -23,6 +23,7 @@
 
   <a href="/api/logout.php" class="btn">Odhlásit se</a>
 </div>
+
 </header>
 
 <main class="auth-container profile-shell">
