--- a/profile/index.html
+++ b/profile/index.html
@@ -15,11 +15,12 @@
   <a href="/profile/index.html" class="btn active">Profil</a>
 
   <a href="/admin/index.html"
-     class="btn btn-warning"
-     id="adminBtn"
-     style="display:none;">
-    Admin panel
-  </a>
+   class="btn admin-btn"
+   id="adminBtn"
+   style="display:none;">
+  Admin panel
+</a>
+
 
   <a href="/api/logout.php" class="btn">Odhlásit se</a>
 </div>
