--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -116,6 +116,7 @@ document.getElementById('bugStatus').addEventListener('change', (e) => {
 });
 
 </script>
-<script src="/js/bug-admin-detail.js"></script>
+<script src="/admin/bug_admin_detail.js"></script>
+
 </body>
 </html>
