--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -50,12 +50,13 @@
     <label style="margin-top:20px;">Admin reply</label>
     <div id="messageHistory"></div>
 
-<textarea id="newMessage" rows="5"></textarea>
+<textarea id="adminMessage" rows="4"
+  placeholder="Napiš odpověď…"></textarea>
 
+<button id="saveBtn" class="btn btn-primary">
+  Uložit
+</button>
 
-    <button id="saveBtn" class="btn btn-primary" style="margin-top:20px;">
-      Uložit
-    </button>
 
   </div>
 
