--- a/profile/bug_detail.html
+++ b/profile/bug_detail.html
@@ -47,7 +47,14 @@
       Odeslat odpověď
     </button>
   </div>
-
+<div id="confirmResolvedBox" class="profile-card" style="display:none;">
+  <button id="confirmResolvedBtn" class="btn btn-success">
+    ✅ Problém je vyřešen
+  </button>
+  <p class="muted">
+  Klikni pouze v případě, že problém skutečně funguje.
+</p>
+</div>
 </main>
 
 <script src="/profile/bug_detail.js"></script>
