--- a/profile/bug_detail.html
+++ b/profile/bug_detail.html
@@ -12,7 +12,9 @@
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
   <div class="auth auth-center">
-    <a href="/profile/index.html" class="btn">Zpět na profil</a>
+    <a href="/profile/index.html?tab=support" class="btn">
+  ← Zpět na profil
+</a>
     <a href="/api/logout.php" class="btn">Odhlásit se</a>
   </div>
 </header>
