--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -11,11 +11,11 @@
 
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
-  <div class="auth">
+  <div class="auth auth-center">
     <a href="/profile/index-en.html" class="btn active">Profile</a>
     <a href="/admin/index.html"
    id="adminBtn"
-   class="btn btn-admin"
+   class="btn admin-btn"
    style="display:none;">
   Admin panel
 </a>
