--- a/admin/bug_reports.html
+++ b/admin/bug_reports.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 
-<body class="auth-page profile-page">
+<body class="profile-page admin-page">
 
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
