--- a/admin/bug_reports.html
+++ b/admin/bug_reports.html
@@ -52,7 +52,10 @@
 
 
 <header class="main-header">
-  <div class="logo"><a href="/">Ordo Draconis</a></div>
+  <div class="logo">
+    <a href="/">Ordo Draconis</a>
+  </div>
+
   <div class="auth">
     <a href="/profile/index.html" class="btn">Profil</a>
     <a href="/api/logout.php" class="btn">Odhlásit</a>
