--- a/admin/bug_reports.html
+++ b/admin/bug_reports.html
@@ -66,7 +66,7 @@
   <h1>Bug reports – admin</h1>
     <a href="/admin/index.html"
    class="btn btn-secondary"
-   style="margin-bottom:20px; display:inline-block;">
+   style="margin-bottom:20px; display:inline-flex;">
   ← Zpět na základní stránku
 </a>
   <table class="admin-table" id="ticketsTable">
