--- a/admin/bug_detail.html
+++ b/admin/bug_detail.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="auth-page profile-page">
+<body class="auth-page profile-page admin-content">
+
 
 <header class="main-header">
   <div class="logo"><a href="/">Ordo Draconis</a></div>
