--- a/admin/bug_reports.html
+++ b/admin/bug_reports.html
@@ -48,7 +48,8 @@
   </style>
 </head>
 
-<body class="auth-page profile-page">
+<body class="auth-page profile-page admin-content">
+
 
 
 <header class="main-header">
