--- a/admin/index.html
+++ b/admin/index.html
@@ -39,11 +39,11 @@ fetch('/api/me.php')
       <a href="/admin/bug_reports.html" class="btn btn-primary">Otevřít</a>
     </div>
 
-    <div class="admin-card disabled">
-      <h3>Users</h3>
-      <p>Správa uživatelů</p>
-      <span class="badge">Coming soon</span>
-    </div>
+    <div class="admin-card">
+  <h3>VIP & Wallet</h3>
+  <p>Správa VIP, DC a uživatelských výhod</p>
+  <a href="/admin/vip.html" class="btn btn-primary">Otevřít</a>
+</div>
 
     <div class="admin-card">
       <h3>Online players</h3>
