--- a/admin/vip.html
+++ b/admin/vip.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/admin/css/admin.css">
 
     <!-- JS -->
-    <script src="/admin/js/api.js" defer></script>
-    <script src="/admin/js/vip_admin.js" defer></script>
+    <script src="/api/js/api.js" defer></script>
+<script src="/admin/js/vip_admin.js" defer></script>
+
 </head>
 <body>
 
