--- a/admin/vip.html
+++ b/admin/vip.html
@@ -9,7 +9,7 @@
 
     <!-- JS -->
     <script src="/api/js/api.js" defer></script>
-<script src="/admin/js/vip_admin.js" defer></script>
+    <script src="/admin/js/vip_admin.js" defer></script>
 
 </head>
 <body>
@@ -49,6 +49,11 @@
 
         <div id="vipAddResult" class="result"></div>
     </section>
+    
+<label style="display:block; margin:10px 0;">
+    <input type="checkbox" id="showExpiredVip">
+    Zobrazit i expirované VIP
+</label>
 
     <hr>
 
