--- a/admin/index.html
+++ b/admin/index.html
@@ -51,6 +51,12 @@ fetch('/api/me.php')
       <a href="/admin/online_players.html" class="btn btn-primary">Otevřít</a>
     </div>
 
+  <div class="admin-card">
+      <h3>Přehled WEB - GAME - CHARACTERS</h3>
+      <p>Správa VIP účtů </p>
+      <a href="/admin/users.html" class="btn btn-primary">Otevřít</a>
+    </div>
+
   </div>
 </main>
 
