--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="auth-page profile-page">
+<body class="auth-page profile-page admin-content">
 
     <script>
 fetch('/api/me.php')
