--- a/admin/users.html
+++ b/admin/users.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="/admin/css/admin.css">
 
-  <script src="/admin/js/api.js" defer></script>
+  <script src="/api/js/api.js" defer></script>
   <script src="/admin/js/users_admin.js" defer></script>
 </head>
 <body>
