--- a/admin/users.html
+++ b/admin/users.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin – Uživatelé</title>
+<link rel="stylesheet" href="/css/style.css">
 
-  <link rel="stylesheet" href="/admin/css/admin.css">
-
-  <script src="/api/js/api.js" defer></script>
+   <script src="/api/js/api.js" defer></script>
   <script src="/admin/js/users_admin.js" defer></script>
 </head>
 <body>
