--- a/profile/index.html
+++ b/profile/index.html
@@ -335,30 +335,52 @@ async function loadGameAccounts() {
     row.classList.add('primary-account');
   }
 
-  row.innerHTML = `
-    <strong>
-      ${isPrimary ? '⭐ ' : ''}Account:
-    </strong> ${acc.login}
+ const premiumTag = (() => {
+  if (acc.premium_days_left === null) {
+    return `<span class="tag muted">Premium: neaktivní</span>`;
+  }
 
-    <span class="tag">${acc.chars_count} characters</span>
-    <span class="tag">${acc.created_at}</span>
+  if (acc.premium_days_left < 0) {
+    return `<span class="tag danger">Premium: expirováno</span>`;
+  }
 
-    <div class="actions">
-      ${
-        isPrimary
-          ? '<span class="tag primary">PRIMARY</span>'
-          : `<button class="btn btn-small" data-primary="${acc.login}">
-               Primární
-             </button>`
-      }
-      <button class="btn btn-small btn-danger" data-login="${acc.login}">
-        Smazat
-      </button>
-      <button class="btn btn-small" data-reset="${acc.login}">
-        Změnit heslo
-      </button>
-    </div>
-  `;
+  if (acc.premium_days_left <= 3) {
+    return `<span class="tag warning">
+      Premium: ${acc.premium_days_left} dny
+    </span>`;
+  }
+
+  return `<span class="tag success">
+    Premium: ${acc.premium_days_left} dní
+  </span>`;
+})();
+
+row.innerHTML = `
+  <strong>
+    ${isPrimary ? '⭐ ' : ''}Account:
+  </strong> ${acc.login}
+
+  <span class="tag">${acc.chars_count} characters</span>
+  <span class="tag">${acc.created_at}</span>
+  ${premiumTag}
+
+  <div class="actions">
+    ${
+      isPrimary
+        ? '<span class="tag primary">PRIMARY</span>'
+        : `<button class="btn btn-small" data-primary="${acc.login}">
+             Primární
+           </button>`
+    }
+    <button class="btn btn-small btn-danger" data-login="${acc.login}">
+      Smazat
+    </button>
+    <button class="btn btn-small" data-reset="${acc.login}">
+      Změnit heslo
+    </button>
+  </div>
+`;
+
 
   list.appendChild(row);
 });
